2009-01-12  Alan Modra  <amodra@bigpond.net.au>

	* ld-spu/ovl.d: Allow for absolute branches in stubs.
	* ld-spu/ovl2.d: Likewise.

2009-01-11  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* ld-elf/linkoncerdiff.d, ld-elf/linkoncerdiff1.s,
	ld-elf/linkoncerdiff2.s: New.

2009-01-07  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/tls-e-20.d, ld-cris/tls-e-20a.d, ld-cris/tls-e-21.d,
	ld-cris/tls-e-23.d, ld-cris/tls-e-66.d, ld-cris/tls-gd-3.d,
	ld-cris/tls-gd-3h.d, ld-cris/tls-global-74.d,
	ld-cris/tls-ie-8e1.d, ld-cris/tls-ldgde-14.d,
	ld-cris/tls-ldgde-15.d, ld-cris/tls-le-12.d, ld-cris/tls-le-13.d,
	ld-cris/tls-le-13s.d, ld-cris/tls-legd-16.d,
	ld-cris/tls-legd-17.d, ld-cris/tls-legdx-16.d,
	ld-cris/tls-legdx-17.d, ld-cris/tls-leie-18.d,
	ld-cris/tls-leie-19.d, ld-cris/tls-local-57.d,
	ld-cris/tls-local-58.d, ld-cris/tls-local-59.d: Adjust for
	relocation value now offset by negative program TLS block size.
	* ld-cris/tls-le-12s.d: Ditto.  Move 128-byte tls-data to last.
	Adjust accordingly.
	* ld-cris/tls-le-12s.s: Use movs, not movu, for sign-extended
	always-negative relocation.
	* ld-cris/tls-tprelm.s: Move filler data to after symbol for
	tested relocation.
	* ld-cris/tls-ok-36.d: Adjust accordingly.

2009-01-03  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/tls-js1.d: New test.

2009-01-02  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/9679
	* ld-elf/pr9679-1.c: New.
	* ld-elf/pr9679-2.c: Likewise.
	* ld-elf/pr9679.rd: Likewise.

	* ld-elf/shared.exp (build_tests): Add test for libpr9679.so.

2009-01-02  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/9676
	* ld-elf/pr9676-1.c: New.
	* ld-elf/pr9676-2.c: Likewiswe.
	* ld-elf/pr9676-3.c: Likewiswe.
	* ld-elf/pr9676-4.c: Likewiswe.
	* ld-elf/pr9676.rd: Likewiswe.

	* ld-elf/shared.exp (build_tests): Add tests for libpr9676-1.a,
	libpr9676-2.a, libpr9676-3.so, libpr9676-4.so and
	libpr9676-4a.so.

	* lib/ld-lib.exp (ar_simple_create): New.
	(run_ld_link_tests): Support archive.
	(run_cc_link_tests): Likewiswe.
