@@ -25,6 +25,7 @@ if ![is_elf_format] {
     return
 }
 
+set old_ldflags $LDFLAGS
 if { [istarget spu*-*-*] } {
     set LDFLAGS "$LDFLAGS --local-store 0:0"
 }
@@ -59,6 +60,8 @@ if { [check_gc_sections_available] } {
 	    "--gc-section" "" {tls_gc.s} {} "tls_gc"}
     }
 }
+
+set LDFLAGS $old_ldflags
 
 # The following tests require running the executable generated by ld.
 if ![isnative] {
