@@ -25,10 +25,13 @@ if ![is_elf_format] {
     return
 }
 
+set old_ldflags $LDFLAGS
 if { [istarget spu*-*-*] } {
-    set LDFLAGS "--local-store 0:0"
+    set LDFLAGS "$LDFLAGS --local-store 0:0"
 }
 
 set testname "empty-orphan"
 
 run_dump_test empty-orphan
+
+set LDFLAGS $old_ldflags
